# webtorrent_rs

./: .gitattributes  .gitignore  Cargo.toml  IMPLEMENTATION_STATUS.md  README.md  TEST_COVERAGE.md  TRACKER_INTEGRATION.md  rustfmt.toml  test_examples.ps1
.github/workflows/: CI.yml
examples/: README.md  TEST_COVERAGE.md  seed_to_dig_relay.rs  seed_to_dig_relay_debug.rs  test_add_data.rs  test_add_duplicate.rs  test_add_info_hash.rs  test_add_invalid_magnet.rs  test_add_invalid_torrent.rs  test_add_magnet_uri.rs  test_add_multiple_concurrent.rs  test_add_torrent_file.rs  test_add_url.rs  test_blocklist_add_ip_v4.rs  test_blocklist_is_blocked.rs  test_blocklist_new.rs  test_client_all_features.rs  test_client_blocklist.rs  test_client_custom_peer_id.rs  test_client_custom_port.rs  test_client_default.rs  test_client_multiple_instances.rs  test_client_no_features.rs  test_client_throttling.rs  test_client_tracker_config.rs  test_creator_announce.rs  test_creator_chained.rs  test_creator_comment.rs  test_creator_default.rs  test_creator_empty_file.rs  test_creator_from_path.rs  test_creator_from_path_missing.rs  test_creator_large_file.rs  test_creator_piece_length.rs  test_creator_small_file.rs  test_download.rs  test_download_torrent_file.rs  test_e2e_seed_download.rs  test_edge_single_piece.rs  test_edge_zero_byte_file.rs  (+40 more)
examples/test_utils/: mod.rs
src/: bencode_parser.rs  blocklist.rs  client.rs  conn_pool.rs  dht.rs  discovery.rs  error.rs  extensions.rs  file.rs  lib.rs  lsd.rs  magnet.rs  nat.rs  peer.rs  piece.rs  protocol.rs  rarity_map.rs  selections.rs  server.rs  store.rs  streaming.rs  throttling.rs  torrent.rs  torrent_creator.rs  tracker.rs  webrtc.rs  webseed.rs  wire.rs
tests/: README.md  common.rs  test_bencode.rs  test_blocklist.rs  test_client.rs  test_conn_pool.rs  test_dht.rs  test_extensions.rs  test_file.rs  test_integration.rs  test_lsd.rs  test_magnet.rs  test_nat.rs  test_piece.rs  test_protocol.rs  test_rarity_map.rs  test_selections.rs  test_store.rs  test_streaming.rs  test_throttling.rs  test_torrent.rs  test_tracker_integration.rs  test_webrtc.rs  test_webseed.rs
